add release configuration